@@ -5,13 +5,13 @@
 
 piece  flare1, flare2, base, turret, lwheel, rwheel, mlauncher;
 
-static-var  restore_delay, gun_1, fired;
+static-var  restore_delay, gun_1, fired, aiming;
 
 // Signal definitions
 #define SIG_AIM				4
 #define SIG_AIM_2			8
-#define SIG_AIM_3			16
-#define SIG_FIRED			32
+#define SIG_FIRED			16
+#define SIG_AIMING			32
 
 #define BASEPIECE base
 #define HITSPEED <75.0>
@@ -28,6 +28,7 @@ Create()
 	hide flare1;
 	hide flare2;
 	fired = 0;
+	aiming = 0;
 	gun_1 = flare1;
 	restore_delay = 3000;
 }
@@ -39,6 +40,15 @@ ResetFire()
 	fired = 1;
 	sleep 3000;
 	fired = 0;
+}
+
+ResetAiming()
+{
+	signal SIG_AIMING;
+	set-signal-mask SIG_AIMING;
+	aiming = 1;
+	sleep 500;
+	aiming = 0;
 }
 
 SetMaxReloadTime(Func_Var_1)
@@ -73,17 +83,36 @@ AimWeapon1(heading, pitch)
 {
 	signal SIG_AIM;
 	set-signal-mask SIG_AIM;
+	start-script ResetAiming();
 	turn turret to y-axis heading speed <250.060440>;
 	turn mlauncher to x-axis -1*pitch speed <200>;
 	wait-for-turn turret around y-axis;
 	wait-for-turn mlauncher around x-axis;
 	start-script RestoreAfterDelay();
 	//sleep 300;
-	return (0);
+	if(fired == 1)
+	{
+		return (0);
+	}
+	return (1);
 }
 
 FireWeapon1()
 {
+	start-script ResetFire();
+	if( gun_1 == 0 )
+	{
+		show flare1;
+		sleep 150;
+		hide flare1;
+	}
+	if( gun_1 == 1 )
+	{
+		show flare2;
+		sleep 150;
+		hide flare2;
+	}
+	gun_1 = !gun_1;
 	return (0);
 }
 
@@ -101,6 +130,10 @@ AimWeapon2(heading, pitch)
 {
 	signal SIG_AIM_2;
 	set-signal-mask SIG_AIM_2;
+	if(aiming == 1)
+	{
+		return (0);
+	}
 	turn turret to y-axis heading speed <250.060440>;
 	turn mlauncher to x-axis -1*pitch speed <200>;
 	wait-for-turn turret around y-axis;
@@ -139,52 +172,6 @@ AimFromWeapon2(piecenum)
 }
 
 QueryWeapon2(piecenum)
-{
-	piecenum = gun_1;
-}
-
-AimWeapon3(heading, pitch)
-{
-	signal SIG_AIM_3;
-	set-signal-mask SIG_AIM_3;
-	turn turret to y-axis heading speed <250.060440>;
-	turn mlauncher to x-axis -1*pitch speed <200>;
-	wait-for-turn turret around y-axis;
-	wait-for-turn mlauncher around x-axis;
-	start-script RestoreAfterDelay();
-	sleep 33;
-	if(fired == 1)
-	{
-		return (0);
-	}
-	return (1);
-}
-
-FireWeapon3()
-{
-	start-script ResetFire();
-	if( gun_1 == 0 )
-	{
-		show flare1;
-		sleep 150;
-		hide flare1;
-	}
-	if( gun_1 == 1 )
-	{
-		show flare2;
-		sleep 150;
-		hide flare2;
-	}
-	gun_1 = !gun_1;
-	return (0);
-}
-
-AimFromWeapon3(piecenum)
-{
-	piecenum = mlauncher;
-}
-
-QueryWeapon3(piecenum)
 {
 	piecenum = gun_1;
 }
