@@ -12,7 +12,7 @@ return {
 		collisionvolumescales = "32 22 32",
 		collisionvolumetype = "CyLy",
 		corpse = "DEAD",
-		damagemodifier = 0.25,
+		damagemodifier = 0.33,
 		decoyfor = "armdrag",
 		explodeas = "smallBuildingexplosiongeneric",
 		footprintx = 2,
@@ -137,7 +137,7 @@ return {
 				intensity = 24,
 				name = "Close-quarters g2g lightning turret",
 				noselfdamage = true,
-				range = 440,
+				range = 430,
 				reloadtime = 1.13333,
 				rgbcolor = "0.5 0.5 1",
 				soundhit = "lashit",
