@@ -12,7 +12,7 @@ return {
 		collisionvolumescales = "32 22 32",
 		collisionvolumetype = "CylY",
 		corpse = "DEAD",
-		damagemodifier = 0.25,
+		damagemodifier = 0.33,
 		decoyfor = "cordrag",
 		explodeas = "flamethrower",
 		footprintx = 2,
