@@ -43,7 +43,7 @@ return {
 			unitgroup = 'weaponaa',
 			model_author = "Mr Bob",
 			normaltex = "unittextures/cor_normal.dds",
-			paralyzemultiplier = 0.3,
+			paralyzemultiplier = 0.5,
 			subfolder = "corships",
 		},
 		featuredefs = {
@@ -109,6 +109,54 @@ return {
 			},
 		},
 		weapondefs = {
+			cortruck_aa = {
+				areaofeffect = 48,
+				avoidfeature = false,
+				canattackground = false,
+				cegtag = "missiletrailaa",
+				craterareaofeffect = 0,
+				craterboost = 0,
+				cratermult = 0,
+				edgeeffectiveness = 0.15,
+				explosiongenerator = "custom:genericshellexplosion-tiny",
+				firestarter = 70,
+				flighttime = 2,
+				impulseboost = 0.123,
+				impulsefactor = 0.123,
+				metalpershot = 0,
+				model = "cormissile.s3o",
+				name = "Light g2a missile launcher",
+				noselfdamage = true,
+				predictboost = 1,
+				range = 750,
+				reloadtime = 2.5,
+				smoketrail = true,
+				smokePeriod = 8,
+				smoketime = 14,
+				smokesize = 4.5,
+				smokecolor = 0.66,
+				smokeTrailCastShadow = false,
+				castshadow = true, --projectile
+				soundhit = "rockhit2",
+				soundhitwet = "splssml",
+				soundstart = "rockhvy2",
+				soundstartvolume = 8.5,
+				startvelocity = 500,
+				texture1 = "null",
+				texture2 = "smoketrailbar",
+				tolerance = 8000,
+				tracks = true,
+				turnrate = 63000,
+				turret = true,
+				weaponacceleration = 110,
+				weapontimer = 5,
+				weapontype = "MissileLauncher",
+				weaponvelocity = 680,
+				damage = {
+					default = 1,
+					vtol = 120,
+				},
+			},
 			cortruck_missile = {
 				areaofeffect = 48,
 				avoidfeature = false,
@@ -152,15 +200,19 @@ return {
 				weaponvelocity = 680,
 				damage = {
 					default = 47,
-					vtol = 120,
 				},
 			},
 		},
 		weapons = {
 			[1] = {
 				badtargetcategory = "NOTAIR",
+				def = "CORTRUCK_AA",
+				onlytargetcategory = "VTOL",
+			},
+			[2] = {
+				badtargetcategory = "VTOL",
 				def = "CORTRUCK_MISSILE",
-				onlytargetcategory = "NOTSUB",
+				onlytargetcategory = "SURFACE",
 			},
 		},
 	},
